--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -22,17 +22,17 @@
             }
             h1 {
                 grid-column: 6 / span 7;
-                grid-row: 3 / 13;
+                grid-row: 6 / span 3;
                 align-self: center;
-                line-height: 100%;
                 margin: 0;
+                font-size: 6rem;
             }
             .img {
                 grid-column: 1 / span 6;
                 grid-row: 3 / span 11;
             }
             .caption {
-                grid-row: 9 / span 2;
+                grid-row: 10 / span 2;
                 font-size: 2rem;
                 text-wrap: balance;
                 align-self: center;
